# meta-signal-persona

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
examples/: canonical.nota
schema/: lib.schema  meta-signal-persona.concept.schema
src/: lib.rs
src/schema/: lib.rs
tests/: round_trip.rs
