[package]
name         = "meta-signal-persona"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/meta-signal-persona"
description  = "MetaSignal contract for privileged Persona engine-manager commands."
publish      = false
links        = "meta-signal-persona"
build        = "build.rs"

[lib]
name = "meta_signal_persona"
path = "src/lib.rs"

[features]
default = []
nota-text = ["dep:nota-next", "signal-frame/nota-text", "signal-persona/nota-text"]

[dependencies]
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
signal-persona = { git = "https://github.com/LiGoldragon/signal-persona.git", branch = "main" }

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[dev-dependencies]
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"
